--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ fastapi==0.112.2
 uvicorn==0.30.5
 pandas==2.2.2
 pandas_ta==0.3.14b0
+setuptools>=65.0.0
+wheel>=0.40.0
 python-dotenv==1.0.1
 requests==2.32.3
