Add Make.com integration files

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # ---- Core ----
 SYMBOL=HYPEUSDT              # e.g., BTCUSDT, HYPEUSDT
-TF_LIST=15m,1h,4h,1d         # comma-separated TFs to compute snapshot
+TF_LIST=5m,15m,1h,1d         # comma-separated TFs to compute snapshot
 LOOKBACK=300                 # candles to fetch per TF
-BYBIT_CATEGORY=spot          # spot | linear | inverse
+BYBIT_CATEGORY=linear          # spot | linear | inverse
 
 # ---- Optional (file snapshot) ----
 WRITE_SNAPSHOT_JSON=true
