Integrate position data into main TA snapshot for single API call with complete trading context

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ WRITE_SNAPSHOT_JSON=true
 # ---- Optional Supabase (not required) ----
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
+
+
+
+BYBIT_API_KEY=QNAfvHxj5eg5mQrHV2
+BYBIT_SECRET_KEY=lZX7mfkXjospJoQKmebsrEV5h2U1diyQ9vZ6
+BYBIT_TESTNET=false
